# Packs

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  README_PYPI.md  mkdocs.yml  setup.cfg  setup.py
Packs/: checkRequirements.py  main.py  packs.py  requirements.txt
Packs/Commands/: cache.py  check.py  install.py  listPackage.py  remove.py
Packs/Utils/: cliControl.py  dependenciesControl.py  logger.py  versionControl.py
devpip/: makepip.py  requirements.txt
devpip/windows/: install.bat
docs/: index.md
site/: 404.html  index.html
site/search/: search_index.json
tests/: test.py
