[metadata]
name = Packs
author = Miguel Vieira Colombo
home-page = https://github.com/Vupy/Packs
description = A package installer
long-description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause License
license-file = LICENSE
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
keywords = Packs, Installer, Package

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.5
packages = 'Packs'
test_suite = tests
scripts = Packs/main.py
setup_requires =
    setuptools
install_requires =
    urllib3

[options.entry_points]
console_scripts =
    packs = Packs.main:main

[sdist]
formats = zip, gztar

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = Packs
line_length = 79
multi_line_output = 5

[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

